--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 									<span class="image">
 										<img src="images/ttod/Gun%20-%20TTOD.jpg" alt="" />
 									</span>
-									<a href="#">
+									<a href="projects/ttod">
 										<h2>This thing of darkness</h2>
 										<div class="content">
 											<p>Production of a scene from "This thing of darkness" by Andy Keen (2018)</p>
@@ -148,7 +148,7 @@
 									<span class="image">
 										<img src="images/iec/Bag%20-%20IEC%20Abroad.jpg" alt=""/>
 									</span>
-									<a href="#">
+									<a href="projects/iec">
 										<h2>IEC Abroad University Fair</h2>
 										<div class="content">
 											<p>Photo gallery for the university fair (IEC Abroad) (2018)</p>
@@ -159,7 +159,7 @@
 									<span class="image">
 										<img src="images/cny/Dragon%20-%20Chinese%20New%20Year.jpg" alt="" />
 									</span>
-									<a href="#">
+									<a href="projects/cny">
 										<h2>Chinese New Year</h2>
 										<div class="content">
 											<p>Promotional video for the Chinese "Year of the dog" fair in Media City (2018)</p>
@@ -170,7 +170,7 @@
 									<span class="image">
 										<img src="images/molly/Lip%20-%20MH%20make%20up.jpg" alt="" />
 									</span>
-									<a href="#">
+									<a href="projects/makeup">
 										<h2>Molly H. Make-up Artist</h2>
 										<div class="content">
 											<p>Showreel material for a make-up artist (2017)</p>
@@ -181,7 +181,7 @@
 									<span class="image">
 										<img src="images/beast/Guitar%20-%20Screaming%20Beast.jpg" alt="" />
 									</span>
-									<a href="#">
+									<a href="projects/beast">
 										<h2>Screaming Beast Despair</h2>
 										<div class="content">
 											<p>Indie Rock band music video (2017)</p>
