--- a/projects/beast.html
+++ b/projects/beast.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>Andreea Cristina Tudor - Agro TV </title>
+    <title>Andreea Cristina Tudor - Screaming Beast   </title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="/assets/css/main.css" />
@@ -41,34 +41,31 @@
     <!-- Main -->
     <div id="main">
         <div class="inner">
-            <h1 class="align-center">Agro TV</h1>
+            <h1 class="align-center">Screaming Beast  </h1>
 
             <section>
                 <div class="box alt">
                     <div class="row gtr-uniform">
 
-                        <div class="col-6">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/xOt5OSS2-m8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
-                        <div class="col-6">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/pjy30RmkYBw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="col-12 align-center">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/uWBz7igWnU4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
 
                         <div class="col-12">
                             <p>
-                                During the summer of 2018 I had a couple days of work experience for AGRO TV, a Romanian TV programme. The footage I captured was used for two promotional videos: one covered a live event showcasing the atmosphere and Romanian traditions, the other an interview with the mayor of the village hosting the event.
+                                Indie Rock Band Screaming Beast needed a music video for one of their singles, Despair. The footage we filmed was used alongside the footage that the band already had. The music video can be found on the band’s social media.
                             </p>
                         </div>
 
                         <div class="col-12">
                             <p>
-                                Role: Camera Operator (Sony HXR-NX5)
+                                Role: 1st AD, Focus Puller
                             </p>
                         </div>
 
                         <div class="col-12">
                             <p>
-                                Responsibilities: For the live event I was focusing on gathering B-roll. I made sure to adapt and capture the atmosphere of the event where animals, children, music and food were present. For the interview, I made sure to gather side-shots and cutaways. Fun fact: the interview was conducted on a carriage.
+                                Responsibilities: I made sure we were on schedule and clapped each shot. Moreover, I was helping the camera operator with focus pulling for more complex shots.
                             </p>
                         </div>
                     </div>
