--- a/projects/cny.html
+++ b/projects/cny.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>Andreea Cristina Tudor - Agro TV </title>
+    <title>Andreea Cristina Tudor - Chinese New Year  </title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="/assets/css/main.css" />
@@ -41,36 +41,40 @@
     <!-- Main -->
     <div id="main">
         <div class="inner">
-            <h1 class="align-center">Agro TV</h1>
+            <h1 class="align-center">Chinese New Year </h1>
 
             <section>
                 <div class="box alt">
                     <div class="row gtr-uniform">
 
-                        <div class="col-6">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/xOt5OSS2-m8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
-                        <div class="col-6">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/pjy30RmkYBw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="col-12 align-center">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/xoQDhkplSw4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
 
                         <div class="col-12">
                             <p>
-                                During the summer of 2018 I had a couple days of work experience for AGRO TV, a Romanian TV programme. The footage I captured was used for two promotional videos: one covered a live event showcasing the atmosphere and Romanian traditions, the other an interview with the mayor of the village hosting the event.
+                                The Manchester Chinese community organised the event celebrating culture, tradition and community coming together for the Chinese New ‘year of the dog’. The event took place in MediaCity UK and the footage was used to create a promotional video.
                             </p>
                         </div>
 
                         <div class="col-12">
                             <p>
-                                Role: Camera Operator (Sony HXR-NX5)
+                                Role: Camera Operator
                             </p>
                         </div>
 
                         <div class="col-12">
                             <p>
-                                Responsibilities: For the live event I was focusing on gathering B-roll. I made sure to adapt and capture the atmosphere of the event where animals, children, music and food were present. For the interview, I made sure to gather side-shots and cutaways. Fun fact: the interview was conducted on a carriage.
+                                Responsibilities: Covered each performance, focusing on close-up and side-angles. Being quite  a busy event, I made sure not to disturb any of the performances as well as adapt to the fast-paced environment.
                             </p>
                         </div>
+
+
+                        <div class="col-6"><span class="image fit"><img src="/images/cny/Chinese%206.jpg" alt="" /></span></div>
+                        <div class="col-6"><span class="image fit"><img src="/images/cny/Chinese%202.jpg" alt="" /></span></div>
+                        <div class="col-6"><span class="image fit"><img src="/images/cny/Chinese%204.jpg" alt="" /></span></div>
+                        <div class="col-6"><span class="image fit"><img src="/images/cny/Chinese%205.jpg" alt="" /></span></div>
+
                     </div>
                 </div>
             </section>
