--- a/projects/iec.html
+++ b/projects/iec.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>Andreea Cristina Tudor - Agro TV </title>
+    <title>Andreea Cristina Tudor - IEC University Fair </title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="/assets/css/main.css" />
@@ -41,36 +41,53 @@
     <!-- Main -->
     <div id="main">
         <div class="inner">
-            <h1 class="align-center">Agro TV</h1>
+            <h1 class="align-center">IEC Abroad University Fair</h1>
 
             <section>
                 <div class="box alt">
                     <div class="row gtr-uniform">
-
-                        <div class="col-6">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/xOt5OSS2-m8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
-                        <div class="col-6">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/pjy30RmkYBw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
-
                         <div class="col-12">
                             <p>
-                                During the summer of 2018 I had a couple days of work experience for AGRO TV, a Romanian TV programme. The footage I captured was used for two promotional videos: one covered a live event showcasing the atmosphere and Romanian traditions, the other an interview with the mayor of the village hosting the event.
+                                The 2018 IEC Abroad University Fair needed a photographer on location to capture the event. Some of the photos were used on their website for promotional purposes.
                             </p>
                         </div>
 
                         <div class="col-12">
                             <p>
-                                Role: Camera Operator (Sony HXR-NX5)
+                                Role: Photographer
                             </p>
                         </div>
 
                         <div class="col-12">
                             <p>
-                                Responsibilities: For the live event I was focusing on gathering B-roll. I made sure to adapt and capture the atmosphere of the event where animals, children, music and food were present. For the interview, I made sure to gather side-shots and cutaways. Fun fact: the interview was conducted on a carriage.
+                                Useful link: <a href="https://www.iecabroad.com/british-university-fair-april-2018/ ">https://www.iecabroad.com/british-university-fair-april-2018</a>
                             </p>
                         </div>
+
+                        <div class="col-4"><span class="image fit"><img src="/images/iec/IEC%201.jpg" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/iec/IEC%202.jpg" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/iec/IEC%203.jpg" alt="" /></span></div>
+
+
+                        <div class="col-4"><span class="image fit"><img src="/images/iec/IEC%207.jpg" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/iec/IEC%208.jpg" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/iec/IEC%209.jpg" alt="" /></span></div>
+
+                        <div class="col-4"><span class="image fit"><img src="/images/iec/IEC%2010.jpg" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/iec/IEC%2011.jpg" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/iec/IEC%2012.jpg" alt="" /></span></div>
+
+                        <div class="col-4"><span class="image fit"><img src="/images/iec/IEC%2013.jpg" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/iec/IEC%2014.jpg" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/iec/IEC%2015.jpg" alt="" /></span></div>
+
+                        <div class="col-4"><span class="image fit"><img src="/images/iec/IEC%2016.jpg" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/iec/IEC%2017.jpg" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/iec/IEC%2018.jpg" alt="" /></span></div>
+
+                        <div class="col-4"><span class="image fit"><img src="/images/iec/IEC%204.jpg" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/iec/IEC%205.jpg" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/iec/IEC%206.jpg" alt="" /></span></div>
                     </div>
                 </div>
             </section>
