--- a/projects/makeup.html
+++ b/projects/makeup.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>Andreea Cristina Tudor - Agro TV </title>
+    <title>Andreea Cristina Tudor - Make-up showreel </title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="/assets/css/main.css" />
@@ -41,34 +41,31 @@
     <!-- Main -->
     <div id="main">
         <div class="inner">
-            <h1 class="align-center">Agro TV</h1>
+            <h1 class="align-center">Make-up showreel  </h1>
 
             <section>
                 <div class="box alt">
                     <div class="row gtr-uniform">
 
-                        <div class="col-6">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/xOt5OSS2-m8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
-                        <div class="col-6">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/pjy30RmkYBw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="col-12 align-center">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/ksFZKLwEadk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
 
                         <div class="col-12">
                             <p>
-                                During the summer of 2018 I had a couple days of work experience for AGRO TV, a Romanian TV programme. The footage I captured was used for two promotional videos: one covered a live event showcasing the atmosphere and Romanian traditions, the other an interview with the mayor of the village hosting the event.
+                                Behind the scenes of a make-up artist’s make-up session. The footage was gathered to be used for personal purposes (showreel).
                             </p>
                         </div>
 
                         <div class="col-12">
                             <p>
-                                Role: Camera Operator (Sony HXR-NX5)
+                                Role: Camera Operator
                             </p>
                         </div>
 
                         <div class="col-12">
                             <p>
-                                Responsibilities: For the live event I was focusing on gathering B-roll. I made sure to adapt and capture the atmosphere of the event where animals, children, music and food were present. For the interview, I made sure to gather side-shots and cutaways. Fun fact: the interview was conducted on a carriage.
+                                Responsibilities: Gathering footage (close-ups) as well as adapt to the location. The studio was full of make-up artists and we had to be mindful of the others not appearing into shot.
                             </p>
                         </div>
                     </div>
