--- a/projects/ttod.html
+++ b/projects/ttod.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>Andreea Cristina Tudor - Agro TV </title>
+    <title>Andreea Cristina Tudor - This thing of darkness </title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="/assets/css/main.css" />
@@ -41,36 +41,46 @@
     <!-- Main -->
     <div id="main">
         <div class="inner">
-            <h1 class="align-center">Agro TV</h1>
+            <h1 class="align-center">This thing of darkness</h1>
 
             <section>
                 <div class="box alt">
                     <div class="row gtr-uniform">
 
-                        <div class="col-6">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/xOt5OSS2-m8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
-                        <div class="col-6">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/pjy30RmkYBw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="col-12 align-center">
+                            <iframe src="https://player.vimeo.com/video/272439454" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                         </div>
 
                         <div class="col-12">
                             <p>
-                                During the summer of 2018 I had a couple days of work experience for AGRO TV, a Romanian TV programme. The footage I captured was used for two promotional videos: one covered a live event showcasing the atmosphere and Romanian traditions, the other an interview with the mayor of the village hosting the event.
+                                A short video production of a scene from a feature-length script. For one of our modules at university, we were given the task to produce/direct from scratch a scene from Andy Keen’s script ‘This thing of darkness’. The narrative follows the protagonist during the story’s climax where reality kicks in. The story contains sensitive elements such as blood, violence, mental health and suicide.
                             </p>
                         </div>
 
                         <div class="col-12">
                             <p>
-                                Role: Camera Operator (Sony HXR-NX5)
+                                Role: Camera Operator
                             </p>
                         </div>
 
                         <div class="col-12">
                             <p>
-                                Responsibilities: For the live event I was focusing on gathering B-roll. I made sure to adapt and capture the atmosphere of the event where animals, children, music and food were present. For the interview, I made sure to gather side-shots and cutaways. Fun fact: the interview was conducted on a carriage.
+                                Responsibilities: I had to adapt to the location (basement) and due to the nature of the story, I had to make sure to capture the actor’s emotions in as little takes as possible.
                             </p>
                         </div>
+
+                        <div class="col-4"><span class="image fit"><img src="/images/exit/Exit%202.jpg" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/exit/Exit%203.png" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/exit/Exit%205.jpg" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/exit/Exit%206.png" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/exit/Exit%207.png" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/exit/Exit%208.png" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/exit/Exit%2010.png" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/exit/Exit%2011.jpg" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/exit/Exit%2012.png" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/exit/Exit%2013.png" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/exit/Exit%2014.png" alt="" /></span></div>
+                        <div class="col-4"><span class="image fit"><img src="/images/exit/Exit%2015.png" alt="" /></span></div>
                     </div>
                 </div>
             </section>
